--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 /* Estilos generales */
 body {
+    font-family: Arial, sans-serif;
     background-color: rgb(249, 250, 251);
     margin: 0;
     padding: 0;
@@ -12,59 +13,63 @@ body {
 }
 
 /* Navegación */
-nav {
-    background-color: #009688;
-    color: white;
-    position: fixed;
-    width: 100%;
-    box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1);
-    z-index: 10;
-}
+        nav {
+            background-color: #009688;
+            color: white;
+            position: fixed;
+            top: 0;
+            width: 100%;
+            box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1);
+            z-index: 1000;
+        }
 
-.nav-container {
-    max-width: 1280px;
-    margin: 0 auto;
-    padding: 1rem 1.5rem;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
+        .nav-container {
+            max-width: 1280px;
+            margin: 0 auto;
+            padding: 1rem 1.5rem;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+        }
 
-.logo {
-    display: flex;
-    align-items: center;
-}
+        .logo {
+            display: flex;
+            align-items: center;
+        }
 
-.logo i {
-    font-size: 1.5rem;
-    margin-right: 0.5rem;
-}
+        .logo i {
+            font-size: 1.5rem;
+            margin-right: 0.5rem;
+        }
 
-.logo span {
-    font-size: 1.25rem;
-    font-weight: bold;
-}
+        .logo span {
+            font-size: 1.15rem;
+            font-weight: bold;
+            text-decoration: inherit;
+            color: white;
+            text-decoration-color: #009688;
+        }
 
-.nav-links {
-    display: none;
-}
+        .nav-links {
+            display: none;
+        }
 
-@media (min-width: 768px) {
-    .nav-links {
-        display: flex;
-        gap: 1.5rem;
-    }
-}
+        @media (min-width: 768px) {
+            .nav-links {
+                display: flex;
+                gap: 1.5rem;
+            }
+        }
 
-.nav-links a {
-    color: white;
-    text-decoration: none;
-    transition: color 0.3s;
-}
+        .nav-links a {
+            color: white;
+            text-decoration: none;
+            transition: color 0.3s;
+        }
 
-.nav-links a:hover {
-    color: #bfdbfe;
-}
+        .nav-links a:hover {
+            color: #bfdbfe;
+        }
 
 /* Hero Section */
 .hero {
@@ -110,12 +115,6 @@ nav {
     justify-content: center;
     padding: 4rem 0; /* Añadido padding para dar altura específica a la sección */
 }
-
-/* .hero-logo { */
-    /* height: 12rem; */
-    /* margin-right: 1rem; */
-    /* margin-left: -15rem; */
-/* } */
 
 .hero-content {
     text-align: center;
