--- a/style.css
+++ b/style.css
@@ -45,53 +45,39 @@ nav {
 .logo span {
     font-size: 1.15rem;
     font-weight: bold;
-    text-decoration: inherit;
     color: white;
-    text-decoration-color: #009688;
 }
 
+/* Estilos para enlaces de navegación */
+.nav-links {
+    display: flex;
+    gap: 1rem;
+}
+
+.menu-icon .hamburguesa {
+    display: none;
+    font-size: 1.5rem;
+    color: white;
+}
+
+/* Mostrar menú hamburguesa en pantallas pequeñas */
 @media screen and (max-width: 768px) {
-    .nav-container {
-        display: block;
-        padding: 0;
-    }
-
-    .nav-container .logo {
-        padding: 0.5rem 0rem 0.5rem 0.5rem;
-    }
-
-    .nav-links a {
+    .nav-links {
         display: none;
-    }
-
-    .menu-icon .hamburguesa {
+        flex-direction: column;
+        background-color: #00695C;
+        width: 100%;
         position: absolute;
-        right: 10px;
-        top: 11px;
+        top: 60px;
+        left: 0;
     }
 
     .nav-links.responsive {
-        position: relative;
-        background-color: #00695C;
-        padding-left: 1%;
-        font-size: 1.5em;
-    }
-
-    .nav-links.responsive a {
-        float: none;
-        display: block;
-        text-align: center;
-    }
-}
-
-@media screen and (min-width: 768px) {
-    .nav-links {
         display: flex;
-        gap: 1.5rem;
     }
 
     .menu-icon .hamburguesa {
-        display: none;
+        display: block;
     }
 }
 
@@ -99,6 +85,7 @@ nav {
     color: white;
     text-decoration: none;
     transition: color 0.3s;
+    text-align: center;            
 }
 
 .nav-container a:hover {
