--- a/style.css
+++ b/style.css
@@ -126,7 +126,7 @@ nav {
 }
 
 .cookie-button {
-    background-color: #007BFF;
+    background-color: #009688;
     color: white;
     border: none;
     border-radius: 4px;
@@ -136,7 +136,7 @@ nav {
 }
 
 .cookie-button:hover {
-    background-color: #0056b3;
+    background-color: #00e7d0;
 }
 
 /* Hero Section */
